--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,7 +29,7 @@
 
     <string-array name="properti">
 
-        <item>Pilih Properti</item>
+        <item>pilih properti</item>
         <item>Rumah</item>
         <item>Kost/Kontrakan</item>
         <item>Ruko</item>
@@ -39,7 +39,7 @@
 
     <string-array name="perbaikan_ac">
 
-        <item>Pilih Layanan Perbaikan AC</item>
+        <item>pilih perbaikan ac</item>
         <item>Ganti Kapasitor Ac 1/2 - 1PK Rp. 225.000(Part dan Jasa)</item>
         <item>Ganti Kapasitor Ac 1 1/2 - 2PK Rp. 295.000(Part dan Jasa)</item>
         <item>Las Sambungan Pipa Freon (Per titik) Rp. 95.000</item>
@@ -47,10 +47,34 @@
 
     </string-array>
 
+    <string-array name="las_freon">
+        <item>------</item>
+        <item>Las Sambungan Pipa Freon (Per titik) Rp. 95.000</item>
+    </string-array>
+
+    <string-array name="las_freon_bocor">
+        <item>------</item>
+        <item>Las Perbaikan Kebocoran Pipa Freon dan Isi Freon Rp. 495.000</item>
+    </string-array>
+
+    <string-array name="ganti_kapasitor">
+        <item>--------</item>
+        <item>Ganti Kapasitor Ac 1/2 - 1PK Rp. 225.000(Part dan Jasa)</item>
+    </string-array>
+
+    <string-array name="ganti_kapasitorr">
+        <item>--------</item>
+        <item>Ganti Kapasitor Ac 1 1/2 - 2PK Rp. 295.000(Part dan Jasa)</item>
+    </string-array>
+
+    <string-array name="cek_ac">
+        <item>--------</item>
+        <item>Pengecekan Rp. 90.000</item>
+    </string-array>
 
     <string-array name="bongkar_ac">
 
-        <item>Pilih Layanan Bongkar/Pasang Ac</item>
+        <item>pilih bongkar ac</item>
         <item>Bobok Tembok per meter Rp. 45.000</item>
         <item>Pengecekan Rp. 90.000</item>
         <item>Bongkar Ac Rp. 100.000</item>
@@ -59,23 +83,92 @@
 
     </string-array>
 
+    <string-array name="bp_ac">
+        <item>--------</item>
+        <item>Bongkar Pasang Ac 1/2 - 1PK Rp. 245.000</item>
+    </string-array>
+
+    <string-array name="bp_acc">
+        <item>--------</item>
+        <item>Bongkar Pasang Ac 1 1/2 - 2PK Rp. 320.000</item>
+    </string-array>
+
+
     <string-array name="cuci_ac">
-        <item>Pilih Cuci AC</item>
+        <item>pilih cuci ac</item>
         <item>1/2 - 1PK Rp. 65.000</item>
         <item>1 1/2 - 2PK Rp. 70.000</item>
     </string-array>
 
+    <string-array name="cuciac">
+        <item>--------</item>
+        <item>1/2 - 1PK Rp. 65.000</item>
+    </string-array>
+
+    <string-array name="cuciacc">
+        <item>--------</item>
+        <item>1 1/2 - 2PK Rp. 70.000</item>
+    </string-array>
+
+
+
+
     <string-array name="freon_ac">
-        <item>Pilih Menu Freon</item>
+        <item>pilih freon ac</item>
         <item>Tambah Freon R22 1/2 - 1PK Rp. 147.000</item>
         <item>Tambah Freon R22 1 1/2 - 2PK Rp. 197.000</item>
         <item>Tambah Freon R32 / R410 1/2 - 1PK Rp. 197.000</item>
         <item>Tambah Freon R32 / R410 1 1/2 - 1PK Rp. 247.000</item>
-        <item>Isi Freon R22 1/2 - 1PK Rp. 247.000</item>
-        <item>Isi Freon R22 1 1/2 - 2PK Rp. 347.000</item>
-        <item>Isi Freon R32 / R410 1/2 - 1PK Rp. 347.000</item>
-        <item>Isi Freon R32 / R410 1 1/2 - 1PK Rp. 447.000</item>
+        <item>Ganti Freon R22 1/2 - 1PK Rp. 247.000</item>
+        <item>Ganti Freon R22 1 1/2 - 2PK Rp. 347.000</item>
+        <item>Ganti Freon R32 / R410 1/2 - 1PK Rp. 347.000</item>
+        <item>Ganti Freon R32 / R410 1 1/2 - 1PK Rp. 447.000</item>
     </string-array>
+
+
+    <string-array name="tambah_freon_r22_1pk">
+        <item>--------</item>
+        <item>Tambah Freon R22 1/2 - 1PK Rp. 147.000</item>
+    </string-array>
+
+    <string-array name="tambah_freon_r22_2pk">
+        <item>--------</item>
+        <item>Tambah Freon R22 1 1/2 - 2PK Rp. 197.000</item>
+    </string-array>
+
+
+    <string-array name="tambah_freon_r32_1pk">
+        <item>--------</item>
+        <item>Tambah Freon R32 / R410 1/2 - 1PK Rp. 197.000</item>
+    </string-array>
+
+    <string-array name="tambah_freon_r32_2pk">
+        <item>--------</item>
+        <item>Tambah Freon R32 / R410 1 1/2 - 1PK Rp. 247.000</item>
+    </string-array>
+
+
+    <string-array name="ganti_freon_r22_1pk">
+        <item>--------</item>
+        <item>Ganti Freon R22 1/2 - 1PK Rp. 247.000</item>
+    </string-array>
+
+    <string-array name="ganti_freon_r22_2pk">
+        <item>--------</item>
+        <item>Ganti Freon R22 1 1/2 - 2PK Rp. 347.000</item>
+    </string-array>
+
+
+    <string-array name="ganti_freon_r32_1pk">
+        <item>--------</item>
+        <item>Ganti Freon R32 / R410 1/2 - 1PK Rp. 347.000</item>
+    </string-array>
+
+    <string-array name="ganti_freon_r32_2pk">
+        <item>--------</item>
+        <item>Ganti Freon R32 / R410 1 1/2 - 1PK Rp. 447.000</item>
+    </string-array>
+
 
 
 
